# gl-exp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  animation.cpp  animation.hpp  bvhProc.cpp  bvhProc.hpp  bvh_preproc.cpp  camera.cpp  camera.hpp  math_util.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  v1.cpp  v2.cpp  window.cpp  window.hpp
